# madgraph-serverless

./: Dockerfile  README.md  docker-bake.hcl  handler.py  local_test.mg5  pyproject.toml  test_input.json
.runpod/: hub.json  tests.json
dependencies/delphes/: Dockerfile
dependencies/emela/: Dockerfile
dependencies/fastjet/: Dockerfile
dependencies/hepmc/: Dockerfile
dependencies/lhapdf/: Dockerfile
dependencies/madgraph/: Dockerfile
dependencies/madgraph-server/: Dockerfile  app.py
dependencies/pythia/: Dockerfile
dependencies/root/: Dockerfile
dependencies/zlib/: Dockerfile
